docs: pre-release audit — Operate section
- backup_restore: add the REQUIRED cloud.identity.provider to 6 snippets (as
  written they'd be API-rejected); fix backupType default (AUTO, not FULL);
  replace inert options.verify with options.validate (verify path is dead code).
- upgrades: SemVer->CalVer is only permitted from 5.26.x; widen CalVer->CalVer
  (newer minor/patch/year); document preUpgradeHealthCheck/autoPauseOnFailure.
- monitoring: JMX+CSV metrics are disabled UNCONDITIONALLY (not monitoring-gated);
  add diagnostics users/roles/counts fields.
- prometheus-grafana: fix operator metrics Service name (neo4j-operator-metrics);
  document metrics.secure=true (HTTPS + bearer) default.
- fault_tolerance: replace fabricated operator-warning text with the real
  server-count warnings; document split-brain auto-detection/repair.
- kubernetes-events: add RestoreFromChainParent + StorageClassNotFound reasons.
- storage_expansion: drop the backup-PVC reference (centralized backup removed).
- performance (Neo4j): correct 4.x->5.x config keys (server.*/db.*/dbms.memory
  .transaction.*), remove non-existent keys/JVM flags, fix spec.service (singular).
- guides/performance (operator): correct reconcile rate-limit + debounce figures.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>